--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/order_service
 spring.datasource.username=root
-spring.datasource.password=duc160197
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8085
